--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=InventoryManagement
+
+#MySql database configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/tcs_july_24
+spring.datasource.username=root
+spring.datasource.password=Root123$
+
+#For changing the port
+server.port=9090
+
+#Hibernate and JPA configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
