--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=InventoryManagement
 #MySql database configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/tcs_july_24
 spring.datasource.username=root
-spring.datasource.password=Root123$
+spring.datasource.password=Prerit@1234
 
 #For changing the port
 server.port=9090
