--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=InventoryManagement
+server.port= 8099
+
+spring.datasource.url=jdbc:mysql://localhost:3306/IM
+spring.datasource.username=root
+spring.datasource.password=Root123$
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto= update
